--- a/form.css
+++ b/form.css
@@ -4,13 +4,43 @@
     padding: 0;
 }
 
-.container {
+body {
+    background-color: black;
+    font-family: "poppins", sans-serif;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    min-height: 100vh;
     justify-content: center;
-    height: 100vh;
+    align-items: center;
     h3 {
-        
+        margin-left: 30px;
+        color: aliceblue;
+        text-align: center;
+        margin-bottom: 10px;
+        font-size: 25px;
+        background: linear-gradient(90deg, rgb(133, 133, 255), rgb(91, 230, 255), rgb(34, 229, 255));
+        border-radius: 10px;
     }
 }
+
+.container {
+    background-color: aliceblue;
+    width: 100%;
+    padding: 20px;
+    border-radius: 20px;
+    max-width: 800px;
+}
+
+.contant {
+    padding: 10px;
+    input {
+        display: block;
+        border: 1px solid;
+        border-radius: 2px;
+        padding: 5px;
+        width: 100%;
+    }
+    label {
+        display: inline-block;
+    }
+}
+
